refactor: api uri 변경 #27
